--- a/simple-login-form/style.scss
+++ b/simple-login-form/style.scss
@@ -36,3 +36,19 @@ body {
   background-color: red;
   padding: 0.5rem;
 }
+
+#button {
+  width: 100%;
+  height: 2.2rem;
+}
+
+label[for='button'] {
+  width: 100%;
+}
+
+.error-message {
+  font-size: 0.8rem;
+  color: red;
+  align-self: start;
+  margin: 0.4rem 0 1.5rem 0;
+}
