--- a/simple-login-form/style.css
+++ b/simple-login-form/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: green;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
 }
 
 * {
@@ -17,8 +17,7 @@ body {
   align-items: center;
   justify-content: space-around;
   background-color: white;
-  margin-top: 10rem;
-  padding: 3rem;
+  padding: 5rem 3rem;
   height: 12rem;
   border-radius: 5px;
 }
@@ -50,6 +49,10 @@ label[for=button] {
   color: red;
   align-self: start;
   margin: 0.4rem 0 1.5rem 0;
+}
+
+.random-color {
+  background-color: red;
 }
 
 /*# sourceMappingURL=style.css.map */
