--- a/simple-login-form/style.scss
+++ b/simple-login-form/style.scss
@@ -1,10 +1,10 @@
 
 body {
-  background-color: green;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
 }
 
 *{
@@ -18,8 +18,7 @@ body {
   align-items: center;
   justify-content: space-around;
   background-color: white;
-  margin-top: 10rem;
-  padding: 3rem;
+  padding: 5rem 3rem;
   height: 12rem;
   border-radius: 5px;
 }
@@ -51,4 +50,9 @@ label[for='button'] {
   color: red;
   align-self: start;
   margin: 0.4rem 0 1.5rem 0;
+
+}
+
+.random-color {
+  background-color: red;
 }
