--- a/keyCode/style.css
+++ b/keyCode/style.css
@@ -51,6 +51,7 @@ body {
   justify-content: start;
   align-items: center;
   flex-grow: 1;
+  margin: 2rem;
 }
 
 .main-body__content {
@@ -62,6 +63,7 @@ body {
   font-size: 1.5rem;
   color: rgba(0, 0, 0, 0.8);
   border-radius: 10px;
+  margin: auto auto;
 }
 
 .information-boxes {
@@ -77,11 +79,18 @@ body {
 .information-box {
   display: flex;
   flex-direction: column;
-  width: 10rem;
-  height: 7rem;
+  flex-basis: 15rem;
+  height: 14rem;
   justify-content: start;
   align-items: center;
   background-color: white;
+  transition: 0.3s;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.information-box:hover {
+  transform: scale(1.05);
+  transition: 0.3s;
 }
 
 .information-box__title {
@@ -90,10 +99,27 @@ body {
   text-align: center;
   width: 100%;
   margin: 0;
+  font-size: 1rem;
 }
 
 .information-box__content {
   margin: auto auto;
+  font-size: 1.8rem;
+  opacity: 0.7;
+}
+
+.big-number {
+  font-size: 4rem;
+  font-weight: 900;
+  display: none;
+  opacity: 0.8;
+}
+
+.information {
+  display: none;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
