--- a/keyCode/style.scss
+++ b/keyCode/style.scss
@@ -55,7 +55,7 @@ body {
   justify-content: start;
   align-items: center;
   flex-grow: 1;
-
+  margin: 2rem;
 }
 .main-body__title{
 
@@ -69,6 +69,7 @@ body {
   font-size: 1.5rem;
   color: rgba(00,00,00, 0.8);
   border-radius: 10px;
+  margin: auto auto;
 }
 
 .information-boxes{
@@ -84,19 +85,44 @@ body {
 .information-box{
   display: flex;
   flex-direction: column;
-  width: 10rem;
-  height: 7rem;
+  flex-basis: 15rem;
+  height: 14rem;
   justify-content: start;
   align-items: center;
   background-color: white;
+  transition: 0.3s;
+  border: 1px solid rgba(0,0,0,0.3);
 }
+
+.information-box:hover{
+  transform: scale(1.05);
+  transition: 0.3s;
+}
+
 .information-box__title{
   background-color: rgba(0,0,255, 0.6);
   padding: 0.5rem;
   text-align: center;
   width: 100%;
   margin: 0;
+  font-size: 1rem;
 }
 .information-box__content{
   margin: auto auto;
+  font-size: 1.8rem;
+  opacity: 0.7;
+}
+
+.big-number {
+  font-size: 4rem;
+  font-weight: 900;
+  display: none;
+  opacity: 0.8;
+}
+
+.information {
+  display: none;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
